[gd_scene load_steps=4 format=3 uid="uid://ijyql3wl7ice"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_y1p0x"]
[ext_resource type="Texture2D" uid="uid://dbc4pcmcw2dt4" path="res://assets/menu/menu_bg.png" id="2_kb4vv"]
[ext_resource type="Theme" uid="uid://b6jvf3edqsin" path="res://themes/buttonTheme.tres" id="3_maftw"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_y1p0x")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("2_kb4vv")

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 400.0
offset_right = 960.0
offset_bottom = 431.0
scale = Vector2(2, 2)
theme = ExtResource("3_maftw")
text = "Start New Game"

[node name="continue" type="Button" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 470.0
offset_right = 961.0
offset_bottom = 501.0
scale = Vector2(2, 2)
theme = ExtResource("3_maftw")
text = "Tutorial"

[node name="settings" type="Button" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 540.0
offset_right = 961.0
offset_bottom = 571.0
scale = Vector2(2, 2)
theme = ExtResource("3_maftw")
text = "settings"

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 825.0
offset_top = 610.0
offset_right = 961.0
offset_bottom = 641.0
scale = Vector2(2, 2)
theme = ExtResource("3_maftw")
text = "Quit Game"

[connection signal="button_up" from="start" to="." method="_on_start_up"]
[connection signal="button_up" from="continue" to="." method="_on_continue_up"]
[connection signal="button_up" from="settings" to="." method="_on_settings_up"]
[connection signal="button_up" from="quit" to="." method="_on_quit_up"]
